--- a/docs/11-JavaScript/04-JavaScript基础/18-包装类.md
+++ b/docs/11-JavaScript/04-JavaScript基础/18-包装类.md
@@ -1,49 +1,49 @@
+---
+title: 包装类
+---
 
 ## 包装类
 
 ### 包装类的介绍
 
-我们都知道，js中的数据类型包括以下几种。
+我们都知道，js 中的数据类型包括以下几种。
 
 - 基本数据类型：String、Number、Boolean、Null、Undefined
 
 - 引用数据类型：Object
 
-JS为我们提供了**三个包装类**：
+JS 为我们提供了**三个包装类**：
 
-- String()：将基本数据类型字符串，转换为String对象。
+- String()：将基本数据类型字符串，转换为 String 对象。
 
-- Number()：将基本数据类型的数字，转换为Number对象。
+- Number()：将基本数据类型的数字，转换为 Number 对象。
 
-- Boolean()：将基本数据类型的布尔值，转换为Boolean对象。
+- Boolean()：将基本数据类型的布尔值，转换为 Boolean 对象。
 
 通过上面这这三个包装类，我们可以**将基本数据类型的数据转换为对象**。
-
 
 代码举例：
 
 ```javascript
-	var num = new Number(3);
+var num = new Number(3);
 
-	var str = new String("hello");
+var str = new String("hello");
 
-	var bool = new Boolean(true);
+var bool = new Boolean(true);
 
-	console.log(typeof num); // 打印结果：object
+console.log(typeof num); // 打印结果：object
 ```
-
 
 **需要注意的是**：我们在实际应用中不会使用基本数据类型的对象。如果使用基本数据类型的对象，在做一些比较时可能会带来一些**不可预期**的结果。
 
 比如说：
 
 ```javascript
-	var boo1 = new Boolean(true);
-	var boo2 = new Boolean(true);
+var boo1 = new Boolean(true);
+var boo2 = new Boolean(true);
 
-	console.log(boo1 === boo2); // 打印结果竟然是：false
+console.log(boo1 === boo2); // 打印结果竟然是：false
 ```
-
 
 再比如说：
 
@@ -51,10 +51,9 @@ JS为我们提供了**三个包装类**：
 var boo3 = new Boolean(false);
 
 if (boo3) {
-	console.log('qianguyihao'); // 这行代码竟然执行了
+  console.log("qianguyihao"); // 这行代码竟然执行了
 }
 ```
-
 
 ### 基本数据类型不能添加属性和方法
 
@@ -65,18 +64,16 @@ if (boo3) {
 代码举例：
 
 ```javascript
-	var str = 123;
+var str = 123;
 
-	str = str.toString(); // 将 number 类型转换为 string 类型
-	str.hello = "千古壹号"; // 添加属性
+str = str.toString(); // 将 number 类型转换为 string 类型
+str.hello = "千古壹号"; // 添加属性
 
-	console.log(typeof str); // 打印结果：string
-	console.log(str.hello); // 打印结果：undefined
+console.log(typeof str); // 打印结果：string
+console.log(str.hello); // 打印结果：undefined
 ```
 
 再比如，String 对象的很多内置方法，也可以直接给字符串用。此时，也是临时将字符串转换为 String 对象，然后再调用内置方法。
-
-
 
 ## 我的公众号
 
@@ -85,7 +82,3 @@ if (boo3) {
 扫一扫，你将发现另一个全新的世界，而这将是一场美丽的意外：
 
 ![](http://img.smyhvae.com/20190101.png)
-
-
-
-
