--- a/docs/面试/大厂面试题.md
+++ b/docs/面试/大厂面试题.md
@@ -1,10 +1,10 @@
 ---
-title: 面试总结
+title: 大厂面试题
 ---
 
-### hello 单车 一面
+### hello 单车 （一面）
 
-- 1.hybid jsbrige 如何通信的,JSBridge 的原理
+- 1.hybid jsbrige 如何通信的,JSBridge 的原理<https://blog.csdn.net/yuzhengfei7/article/details/93468914>
 
 - 2.前端 sdk 是怎么做的，有哪些讲究
 
@@ -23,3 +23,5 @@ title: 面试总结
 - 9.proxy 比 object.defineProperty 优势，执行效率为什么高
 
 - 10.虚拟 dom 的原理是什么？里面的 diff 算法是怎样的 ？ 2，3，4，5 如果 34 换 45，怎么改变
+
+- 11.js 在面向对象里面的体现 ， 继承有几种实现方式 ，寄生组合式继承 具体是怎样的？es5 和 es6 继承的区别
