--- a/docs/面试/大厂面试题.md
+++ b/docs/面试/大厂面试题.md
@@ -19,9 +19,12 @@ title: 大厂面试题
 - 7.mvvm 在 vue 里的体现
 
 - 8.data 为什么是个函数
-
+  <https://www.jianshu.com/p/f3e774c57356>
 - 9.proxy 比 object.defineProperty 优势，执行效率为什么高
+  <https://juejin.im/post/5acd0c8a6fb9a028da7cdfaf>
 
 - 10.虚拟 dom 的原理是什么？里面的 diff 算法是怎样的 ？ 2，3，4，5 如果 34 换 45，怎么改变
+  <https://juejin.im/post/5d36cc575188257aea108a74#heading-18>
+  <https://efe.baidu.com/blog/the-inner-workings-of-virtual-dom/>
 
-- 11.js 在面向对象里面的体现 ， 继承有几种实现方式 ，寄生组合式继承 具体是怎样的？es5 和 es6 继承的区别
+* 11.js 在面向对象里面的体现 ， 继承有几种实现方式 ，寄生组合式继承 具体是怎样的？es5 和 es6 继承的区别
