--- a/docs/面试/大厂面试题.md
+++ b/docs/面试/大厂面试题.md
@@ -27,4 +27,291 @@ title: 大厂面试题
   <https://juejin.im/post/5d36cc575188257aea108a74#heading-18>
   <https://efe.baidu.com/blog/the-inner-workings-of-virtual-dom/>
 
-* 11.js 在面向对象里面的体现 ， 继承有几种实现方式 ，寄生组合式继承 具体是怎样的？es5 和 es6 继承的区别
+- 11.js 在面向对象里面的体现 ， 继承有几种实现方式 ，寄生组合式继承 具体是怎样的？es5 和 es6 继承的区别
+
+### 百度
+
+- 1、请分析以下代码执行结果
+
+```JavaScript
+['1', '3', '10'].map(parseInt);
+```
+
+- 2、请分析以下代码执行结果
+
+```JavaScript
+var number = 10;
+function fn() {
+  console.log(this.number);
+}
+var obj = {
+  number: 2,
+  show: function(fn) {
+    this.number = 3;
+    fn();
+    arguments[0]();
+  }
+};
+obj.show(fn);
+```
+
+- 3、请写出 inner 的实际高度。
+
+```JavaScript
+<style>
+  .outer {
+    width: 200px;
+    height: 100px;
+  }
+  .inner {
+    width: 60px;
+    height: 60px;
+    padding-top: 20%;
+  }
+</style>
+<div class="outer"><div class="inner"></div></div>
+```
+
+- 4、手写一个深拷贝函数。
+
+- 5、HTTP 状态码 301 302 304 403。
+
+- 6、手写发布订阅模式 EventEmitter。
+
+- 7、手写一个多表查询的 sql 语句。
+
+  当时用的是 left join 实现。
+
+- 8、react 高阶函数的写法，通常有哪几种。
+
+  第一种是通过工厂模式直接 wrapper，第二种是通过组件反向继承的方式。
+
+```JavaScript
+// 反向继承方式写法如下
+class A extends B{
+  render() {
+    return (
+      <div>component1 start</div>
+        super.render()
+      <div>component1 end</div>
+    )
+  }
+}
+```
+
+- 9、delete 数组的 item，数组的 length 是否会 -1。
+
+  不会。
+
+- 10、mongoDB 中的 BSON 是什么？
+
+  B 代表二进制。
+
+- 11、关系型数据库和 nosql 查询效率谁高？
+
+  关系型是 B+ tree 查询效率相对较高。
+
+- 12、使用 node app.js 开启服务，如何让它在后台运行。
+
+  开启守护进程，在命令后加上 & 符号，表示开启守护进程来执行。
+
+node app.js &
+
+- 13、尽可能写出更多的数组副作用方法。
+
+splice、push、pop、shift、unshift。
+
+sort、fill、reverse。
+
+### 百度三面：
+
+- 1、实现一个周岁函数，例如 fn('2018-8-8') 输出 1，只要是过了生日就 +1。
+
+- 2、不断优化刚才实现的函数，用尽一切办法，多问一问还有吗？跳出自己的固定思维圈。
+
+### 阿里
+
+- 1、vue 双向数据绑定原理，依赖收集是在什么时候收集的？
+
+  是在 created 生命周期之前，render 生成虚拟 dom 的时候。
+
+- 2、react hooks 原理是什么？
+
+  hooks 是用闭包实现的，因为纯函数不能记住状态，只能通过闭包来实现。
+
+- 3、useState 中的状态是怎么存储的？
+
+  通过单向链表，fiber tree 就是一个单向链表的树形结构。
+
+### 爱奇艺
+
+- 1、浏览器渲染 js，html，css 的顺序。
+
+- 2、react dom diff 算法，list 比较首先比较的是什么？
+
+  首先比较同层级元素，从左到右。
+
+- 3、为什么 react 要做成异步的呢？
+
+因为 state 更新会导致组件重新渲染，在渲染后，才能把新的 props 传递到子组件上，所以即使 state 做成同步，props 也做不成，为了保证 state 和 props 的一致性。
+
+为了性能优化，state 会根据不同的优先级进行更新。
+
+为了让 react 更加灵活，如实现异步过渡，例如页面在切换的时候，如果延时很小，就在后台自动渲染了，渲染好之后再进行跳转；如果延时相对较长，可以加一个 loading。
+
+- 4、对象的 {…} 解构，是 rest 吗？
+
+  是。
+
+- 5、自己实现一个 Symbol Interator 。
+
+```JavaScript
+// 给一个对象设置Symbol Interator
+var obj = {
+  *[Symbol.iterator]() {
+    yield 1;
+    yield 2;
+    yield 3;
+  }
+};
+```
+
+- 6、options 头是在什么时候会进行发送。
+
+检测服务器所支持的请求方法
+
+CORS 中的预检请求
+
+- 7、sessionStorage 在两个 tab 窗口能共享吗？
+
+  不能，和后端的 session 类似，每一个窗口对应一个会话层。
+
+- 8、localStorage 存放的只能是 string 类型。
+
+  插入时需要将对象转换为字符串，读取时需要做 JSON.parse 转换。
+
+- 9、写一个 0-100 的正则表达式。
+
+/^(\d|[1-9]\d|100)\$/;
+
+- 10、linux 中怎么查看内存和磁盘。
+
+top 命令，查看内存。
+
+free 命令，查看内存。
+
+ps aux 列出当前内存中正在运行的程序。
+
+df 命令，查看磁盘。
+
+- 11、meta 标签用过吗，都用来做些什么？
+
+seo 优化
+
+viewreport 设置手机端适配
+
+设置 charset 字符编码
+
+模拟 http 标头字段
+
+```JavaScript
+<meta name="keywords" content="电商,物流" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="utf-8" />
+<!-- 模拟 html 缓存头部 -->
+<meta http-equiv="expires" content="Sunday 22 July 2016 16:30 GMT" />
+```
+
+### 字节跳动
+
+- 1、请分析以下代码执行结果
+
+```JavaScript
+async function a() {
+  var result = Promise.resolve();
+  result.abort = function() {
+    console.log('xxx');
+  };
+  return result;
+}
+var p = a();
+p.abort();
+```
+
+- 2、手写一个节流函数
+
+  手写节流函数
+
+- 3、什么是装箱和拆箱
+
+  装箱和拆箱操作，能够在值类型和引用类型中架起一座桥梁。换言之,可以轻松的实现值类型与引用类型的互相转换。
+
+  装箱是将值类型转换为引用类型，拆箱是将引用类型转换为值类型。
+
+- 4、什么是委托
+
+  粗略来说，一个类想执行一个方法，但它本身没有这个方法，这个方法在另一个类中，于是它“委托”那个类来帮它执行。
+
+```JavaScript
+using System;
+using System.Collections.Generic;
+using System.Text;
+namespace Delegate
+{
+    //定义委托，它定义了可以代表的方法的类型
+    public delegate void GreetingDelegate(string name);
+    class Program
+    {
+        private static void EnglishGreeting(string name)
+        {
+            Console.WriteLine("Morning, " + name);
+        }
+        private static void ChineseGreeting(string name)
+        {
+            Console.WriteLine("早上好, " + name);
+        }
+        //注意此方法，它接受一个 GreetingDelegate 类型的参数，该参数是返回值为空，参数为 string 类型的方法
+        private static void GreetPeople(string name, GreetingDelegate MakeGreeting)
+        {
+            MakeGreeting(name);
+        }
+        static void Main(string[] args)
+        {
+            GreetPeople("yhlben", EnglishGreeting);
+            GreetPeople("yhlben", ChineseGreeting);
+            Console.ReadKey();
+        }
+    }
+}
+```
+
+- 5、手写一个 reduce 方法。
+
+```JavaScript
+Array.prototype.reduce = function(reducer, initVal) {
+  for (let i = 0; i < this.length; i++) {
+    initVal = reducer(initVal, this[i], i, this);
+  }
+  return initVal;
+};
+```
+
+- 6、手写一个模板字符串替换方法
+
+```JavaScript
+function template(html, obj) {
+  return html.replace(/\{\{(.*?)\}\}/g, function(match, key) {
+    return obj[key.trim()];
+  });
+}
+
+template('{{name}}很厉name害，才{{ age }}岁', { name: 'jawil', age: '15' });
+```
+
+- 7、看过 antd 源码吗，如何实现一个 Model，Message 组件？
+
+  只能猜想到 React Portals，未曾看过源码，有待提升。
+
+- 8、如果要设计一套微前端架构，说说你的具体思路？如何实现主页面事件注册机制？如何解决多个 iframe 同时通信？
+
+  需要有落地实战项目，不然很难答好，消息加锁等。
