--- a/docs/11-JavaScript/04-JavaScript基础/18-包装类.md
+++ b/docs/11-JavaScript/04-JavaScript基础/18-包装类.md
@@ -51,7 +51,7 @@ console.log(boo1 === boo2); // 打印结果竟然是：false
 var boo3 = new Boolean(false);
 
 if (boo3) {
-  console.log("qianguyihao"); // 这行代码竟然执行了
+  console.log("mokinzhao"); // 这行代码竟然执行了
 }
 ```
 
@@ -77,8 +77,9 @@ console.log(str.hello); // 打印结果：undefined
 
 ## 我的公众号
 
-想学习**代码之外的技能**？不妨关注我的微信公众号：**千古壹号**（id：`qianguyihao`）。
+想学习**更多的技能**？不妨关注我的微信公众号：**
+**（id：`mokinzhao`）。
 
 扫一扫，你将发现另一个全新的世界，而这将是一场美丽的意外：
 
-![](http://img.smyhvae.com/20190101.png)
+![](http://api.ffbig.cn/wchatp.jpeg)
