--- a/docs/11-JavaScript/04-JavaScript基础/10-作用域.md
+++ b/docs/11-JavaScript/04-JavaScript基础/10-作用域.md
@@ -134,7 +134,7 @@ fun6(123); //打印结果为123
 
 ## 我的公众号
 
-想学习<font color=#0000ff>**代码之外的技能**</font>？不妨关注我的微信公众号：**千古壹号**（id：`qianguyihao`）。
+想学习<font color=#0000ff>**更多的技能**</font>？不妨关注我的微信公众号：**千古壹号**（id：`mokinzhao`）。
 
 扫一扫，你将发现另一个全新的世界，而这将是一场美丽的意外：
 
