--- a/docs/12-ECMAScript/03-ES6的介绍和环境配置.md
+++ b/docs/12-ECMAScript/03-ES6的介绍和环境配置.md
@@ -81,7 +81,7 @@ ES6 的目标是：让 JS 语言可以编写复杂的大型应用程序，成为
 
 ```javascript
 let a = "smyhvae";
-const b = "qianguyihao";
+const b = "mokinzhao";
 
 console.log(a);
 console.log(b);
@@ -192,7 +192,7 @@ index.js：
 "use strict";
 
 var a = "smyhvae";
-var b = "qianguyihao";
+var b = "mokinzhao";
 
 console.log(a);
 console.log(b);
