add: html,vue ，performance，webpack

--- a/docs/11-JavaScript/04-JavaScript基础/18-包装类.md
+++ b/docs/11-JavaScript/04-JavaScript基础/18-包装类.md
@@ -67,7 +67,7 @@ if (boo3) {
 var str = 123;
 
 str = str.toString(); // 将 number 类型转换为 string 类型
-str.hello = "千古壹号"; // 添加属性
+str.hello = "AT弄潮儿"; // 添加属性
 
 console.log(typeof str); // 打印结果：string
 console.log(str.hello); // 打印结果：undefined
