--- a/docs/11-JavaScript/04-JavaScript基础/15-数组的常见方法&数组的遍历.md
+++ b/docs/11-JavaScript/04-JavaScript基础/15-数组的常见方法&数组的遍历.md
@@ -279,7 +279,7 @@ array = Array.from(arrayLike)
 var arr4 = ["a", "b", "c", "d", "e", "f"];
 
 //从第index为1的位置开始删除元素,一共删除三个元素。并且在 index=1 的前面追加两个元素
-var result4 = arr4.splice(1, 3, "千古壹号", "vae");
+var result4 = arr4.splice(1, 3, "AT弄潮儿", "vae");
 
 console.log("arr4：" + JSON.stringify(arr4));
 console.log("result4：" + JSON.stringify(result4));
@@ -288,7 +288,7 @@ console.log("result4：" + JSON.stringify(result4));
 打印结果：
 
 ```javascript
-arr4：["a","千古壹号","vae","e","f"]
+arr4：["a","AT弄潮儿","vae","e","f"]
 result4：["b","c","d"]
 ```
 
@@ -308,7 +308,7 @@ result4：["b","c","d"]
 ```javascript
     var arr1 = [1, 2, 3];
     var arr2 = ["a", "b", "c"];
-    var arr3 = ["千古壹号", "vae"];
+    var arr3 = ["AT弄潮儿", "vae"];
 
     var result1 = arr1.concat(arr2);
 
@@ -327,10 +327,10 @@ result4：["b","c","d"]
 ```javascript
 arr1 =[1,2,3]
 arr2 =["a","b","c"]
-arr3 =["千古壹号","vae"]
+arr3 =["AT弄潮儿","vae"]
 
 result1 =[1,2,3,"a","b","c"]
-result2 =["a","b","c",1,2,3,"千古壹号","vae"]
+result2 =["a","b","c",1,2,3,"AT弄潮儿","vae"]
 ```
 
 从打印结果中可以看到，原数组并没有被修改。
@@ -632,7 +632,7 @@ obj:王一,王二,王三
 
 ```javascript
     const arr1 = [
-        { name: '千古壹号', age: '28' }, { name: '许嵩', age: '32' }
+        { name: 'AT弄潮儿', age: '28' }, { name: '许嵩', age: '32' }
     ];
     const arr2 = arr1.map(item => item.name); // 将数组 arr1 中的 name 属性，存储到 数组 arr2 中
 
@@ -643,9 +643,9 @@ obj:王一,王二,王三
 打印结果：
 
 ```
-    arr1:[{"name":"千古壹号","age":"28"},{"name":"许嵩","age":"32"}]
+    arr1:[{"name":"AT弄潮儿","age":"28"},{"name":"许嵩","age":"32"}]
 
-    arr2:["千古壹号","许嵩"]
+    arr2:["AT弄潮儿","许嵩"]
 
 ```
 
@@ -1168,7 +1168,7 @@ array = Array.from(arrayLike)
 
 ## 我的公众号
 
-想学习<font color=#0000ff>**更多的技能**</font>？不妨关注我的微信公众号：**千古壹号**（id：`mokinzhao`）。
+想学习<font color=#0000ff>**更多的技能**</font>？不妨关注我的微信公众号：**AT弄潮儿**（id：`mokinzhao`）。
 
 扫一扫，你将发现另一个全新的世界，而这将是一场美丽的意外：
 
