--- a/docs/11-JavaScript/04-JavaScript基础/20-正则表达式.md
+++ b/docs/11-JavaScript/04-JavaScript基础/20-正则表达式.md
@@ -340,7 +340,7 @@ console.log(emailReg.test(email));
 
 ## 我的公众号
 
-想学习**更多的技能**？不妨关注我的微信公众号：**千古壹号**（id：`mokinzhao`）。
+想学习**更多的技能**？不妨关注我的微信公众号：**AT弄潮儿**（id：`mokinzhao`）。
 
 扫一扫，你将发现另一个全新的世界，而这将是一场美丽的意外：
 
