--- a/docs/11-JavaScript/04-JavaScript基础/21-事件简介.md
+++ b/docs/11-JavaScript/04-JavaScript基础/21-事件简介.md
@@ -313,7 +313,7 @@ var arr2 = document.getElementsByClassName("hehe"); //方式三：通过 类名 
 
 ## 我的公众号
 
-想学习**更多的技能**？不妨关注我的微信公众号：**千古壹号**（id：`mokinzhao`）。
+想学习**更多的技能**？不妨关注我的微信公众号：**AT弄潮儿**（id：`mokinzhao`）。
 
 扫一扫，你将发现另一个全新的世界，而这将是一场美丽的意外：
 
