--- a/docs/面试/大厂内推.md
+++ b/docs/面试/大厂内推.md
@@ -3,3 +3,278 @@ title: 大厂内推
 ---
 
 - 阿里<https://github.com/AlanCheen/Alibaba-Nei-Tui-Guide>
+- 腾讯<https://github.com/AlanCheen/Alibaba-Nei-Tui-Guide>
+- 字节跳动 加博主微信号(mokinzhao)私聊
+
+|  表头   | 表头  |
+|  ----  | ----  |
+| 单元格  | 单元格 |
+| 单元格  | 单元格 |
+公司
+
+地点
+
+岗位描述
+
+联系人微信号 / 手机号
+
+更新时间
+
+墨奇科技
+
+北京
+
+全栈-偏前端，薪资与实力绝对相符， 六险二金，办公环境良好，坐标北京中关村，薪资20+～30+。官网地址：moqi.ai
+
+微信：zxh27061322
+
+2019.07.02
+
+阿里巴巴
+
+杭州
+
+杭州资深前端/前端专家（5年及以上）    25-50k   RN，WEEX会混合开发。（p6+ 或 p7-）
+
+微信：lj873155768（猎头）
+
+2019.07.02
+路德科技
+
+北京
+
+vue技术栈。小公司。没有一金。一年左右经验，9-14k，望京 东湖渠地铁站附近
+
+微信：mumuxi227
+
+2019.07.02
+
+阿里云智能事业群体验技术团队 (TXD)
+
+杭州 / 北京
+
+https://cdn.nlark.com/yuque/0/2019/png/103147/1552617323949-cd3c17ca-ee88-4e5e-bad0-09bd737fcb06.png
+
+邮箱：zuoqi.zzq@alibaba-inc.com
+
+微信：zzq1996705
+
+
+
+哈啰出行
+
+上海
+
+https://hellobike.zhiye.com/zpdetail/510312143?r=&p=1%5E12&c=&d=&k=
+
+邮箱：yyg204731@gmail.com
+
+微信：yygmind
+
+
+
+掌门一对一
+
+上海
+
+岗位职责：
+
+1、负责前端项目架构设计，配合产品经理和设计师，参与产品的开发和业务实现；
+
+2、 基于Vue.js和React完成web前端项目，进行性能优化。
+
+3、 通过各种前端技术手段，提高用户体验并满足性能要求；
+
+4、 与后台工程师深度交流合作，一起研讨技术实现方案，并落实为具体的开发工作；
+
+5、 配合团队整体建设，协助构建优秀的团队开发环境和基础设施，指导、分享前端技术经验，帮助团队共同成长
+
+职位要求：
+
+1、 全日制本科及以上学历，计算机或相关专业优先
+
+2、 3年以上前端开发经验
+
+3、 精通react或vue.js 框架；
+
+4、 精通HTML5/CSS3/Javascript，熟悉flex布局，有过丰富的开发经验；
+
+5、 有ES6,webpack的实践经验；
+
+6、 熟悉组件间的通信和数据的管理,了解flux/redux；
+
+7、 对模块化，组件化，前端工程化有所认识；
+
+8、 具备较好的沟通、理解、表达、逻辑能力、学习能力和执行力
+t5以上（30k+）
+
+邮箱：415337791@qq.com
+
+
+
+明源云客
+
+深圳
+
+职位描述：
+
+技术导向，牛人多，氛围赞，扁平管理； 
+
+定位：敏捷开发小组的中坚力量，中高级定位，能够独挡一面，独立完成开发任务，对技术有追求，渴望突破和创新。团队技术氛围好，牛人多，定期组织技术交流和分享，个人成长空间大。 
+
+一、岗位职责： 
+
+1、熟悉敏捷开发模式，根据设计文档和开发规范，独立编写高质量代码； 
+
+2、参与需求分析，进行功能设计并根据需求搭建开发环境； 
+
+3、发现并修复BUG，不断优化现有产品，提高产品稳定性、可扩展性及用户体验； 
+
+4、参与开发成果评审，关注前沿技术研究，并应用于项目开发中。 
+
+二、任职要求： 
+
+1、本科以上学历，计算机相关专业，3-5年的JavaScript开发经验，具备良好的面向对象编程基础； 
+
+2、精通JavaScript、Ajax、HTML、CSS等前端技术；
+
+3、掌握react、vue、angular等前沿框架，熟悉ES6标准，掌握一种后端开发语言更佳； 
+
+4、熟悉nodejs，了解nginx等web服务器配置，熟悉linux命令； 
+
+5、熟悉http，熟悉各种浏览器终端的兼容性，对Web前台的性能优化以及Web常见漏洞有一定的理解和实践； 
+
+6、热爱前端开发，关注新技术的发展动态，并能结合实际运用，代码风格严谨工整，有技术攻坚能力； 
+
+7、工作积极主动，有钻研和进取精神，能和团队高效配合、良好沟通。
+
+联系人vx HQX19960919
+
+邮箱：huangqx01@mingyuanyun.com
+
+
+
+
+
+
+
+
+
+
+
+
+
+阿里巴巴新零售技术部（淘系/大天猫）
+
+杭州 / 北京
+
+前端后端客户端算法 都需要，部分jd如下：
+前端方向：
+
+1. 熟练掌握移动端 H5 开发、熟悉主流移动浏览器的技术特点；
+
+2. 熟练运用 JavaScript 语言与 HTML5、CSS3 等技术;
+
+3. 熟悉模块化、前端编译和构建工具，熟练运用主流的移动端 JS 库和开发框架，并深入理解其设计原理，例如：Zepto、React 等；
+
+4. 能提供完善的 WebApp 技术方案，了解 native 移动应用开发，有类 react native 开发经验者优先；
+
+5. 对技术有强烈的进取心，具有良好的沟通能力和团队合作精神、优秀的分析问题和解决问题的能力。
+
+Node 方向：
+
+1、熟悉 Node.js Web 应用开发，有大型 Node.js 项目的开发经验；
+
+2、熟悉 Node.js 异步编程，对 koa/co/async 等模块原理机制了解透彻；
+
+3、熟悉 Node.js 以及 V8 的性能和稳定性优化，能对系统整体性能进行评估，解决内存瓶颈；
+
+4、熟悉 Web 安全相关知识，并能使用相关技术防范安全漏洞；
+
+5、关注业内动态，有开源社区贡献者优先；
+
+6、个性乐观开朗，逻辑性强， 具有良好的沟通能力和团队合作精神
+
+互动游戏方向：
+
+1. 熟练掌握 Javascript，有移动端 H5 研发基础
+
+2. 精通 Canvas/WebGL/CSS3，并能够使用原生 API 绘制图形动画
+
+3. 良好的前端架构能力和项目管理能力，良好的编码习惯，掌握图形图像学知识基础
+
+5. 有 H5 互动游戏开发经验、3D 游戏开发经验优先
+
+5. 对技术有强烈的进取心，具有良好的沟通能力和团队合作精神、优秀的分析问题和解决问题的能力
+
+email：13107724281@163.com
+
+
+
+wechat：
+13107724281
+
+
+
+shopee
+
+深圳
+
+ https://app.mokahr.com/apply/shopee/2963
+
+316776804@qq.com
+
+
+
+明源云创DevOps开发组
+
+深圳
+
+职位描述：
+
+定位：隶属于云技术创新中心，技术导向型组织。团队的攻坚角色，能独当一面，负责架构设计，攻破技术难题，处理各种疑难杂症。内部技术氛围好，主张用技术引爆生产力，鼓励突破和创新，技术大咖多，可随时交流，个人成长、晋升空间大。
+
+一、岗位职责：  
+
+1、负责产品的前端架构设计工作，为项目构建稳健的前端框架；  
+
+2、负责产品核心代码编写、疑难问题处理，不断优化和改进产品的前端逻辑，提升稳定性、可扩展性及用户体验；  
+
+3、新技术研究与应用，制定前端技术路线、技术标准并推动落地；
+
+4、指导并协助项目组成员，确保产品按时交付并高质量上线。
+
+二、任职要求：  
+
+1、本科或以上学历，计算机相关专业；  
+
+2、3年以上Web前端开发经验，2年以上Web前端设计经验，具备良好的面向对象编程基础；  
+
+3、熟练掌握HTML/CSS/JavaScript/jQuery，有大型项目前端设计和开发经验者优先；  
+
+4、熟练掌握 AngularJS/ReactJS/VueJS 至少一种框架，熟悉ES6标准，熟悉前端模块化开发方法；  
+
+5、熟悉nodejs，或其它服务端语言（如：PHP、Python）更佳；
+
+6、熟悉nginx等web服务器配置，熟悉linux命令；
+
+7、熟悉http，熟悉各种浏览器终端的兼容性，擅长Web性能优化；
+
+8、了解前端网络安全要求及安全方案设计，能规避和解决Web常见漏洞；  
+
+9、思路清晰，思维敏捷，工作积极主动，有钻研和进取精神，能和团队高效配合、良好沟通。
+
+微信：wwl-13436269040
+
+邮箱：wangwl04@mingyuanyun.com
+
+
+
+蚂蚁金服 - 国际事业群 - 香港钱包
+
+深圳
+
+BOSS直聘: JD
+
+微信: ___Tyo
+
