--- a/docs/00-大纲.md
+++ b/docs/00-大纲.md
@@ -2,4 +2,8 @@
 title: 大纲
 ---
 
-![markdown](/outline.png)
+![](/outline.png)
+
+- 建立了一个全栈大前端技术相关群，入群请加微信号：
+
+<img src="/wchat.jpeg" width="400" height="400">
