--- a/docs/00-大纲.md
+++ b/docs/00-大纲.md
@@ -1,9 +1,22 @@
 ---
-title: 大纲
+title: 项目大纲
 ---
 
+### 更新计划
+
+#### 全栈大前端系列总共分为 3 期实现
+
+- 1 期 梳理基础知识和常用技术栈
+- 2 期 学习跨端融合技术认识"大前端"
+- 3 期 结合服务端技术通晓 "全栈"
+
+#### 目前处于第 1 期，预计 2020 年底前实现 2-3 期
+
+### 技术群
+
+建立了一个全栈大前端技术交流群，群内会筛选知识点和告知更新进度,入群请加微信号：
+<img src="/wchat.jpeg" width="350" height="400">
+
+### 知识大纲
+
 ![](/outline.png)
-
-- 建立了一个全栈大前端技术相关群，入群请加微信号：
-
-<img src="/wchat.jpeg" width="400" height="400">
