update:面试、安全、SSR

--- a/docs/面试/大厂面试题.md
+++ b/docs/面试/大厂面试题.md
@@ -29,6 +29,21 @@ title: 大厂面试题
 
 - 11.js 在面向对象里面的体现 ， 继承有几种实现方式 ，寄生组合式继承 具体是怎样的？es5 和 es6 继承的区别
 
+### 阿里 钉钉 （一面）：
+
+- postion 的属性
+- 文档流是什么？
+- get和post 请求区别
+- get 如何发送一个图片
+- Hybird WebView权限控制的
+- WebView 安全漏洞及防护
+- Jsbrige 原理
+- xxApp 混合开发 难点及架构
+- 性能优化
+- cdn外部引用的好处
+- Gzip 原理
+- 服务端渲染的优缺点 
+
 ### 百度
 
 - 1、请分析以下代码执行结果
