--- a/docs/面试/大厂面试题.md
+++ b/docs/面试/大厂面试题.md
@@ -33,16 +33,36 @@ title: 大厂面试题
 
 - postion 的属性
 - 文档流是什么？
-- get和post 请求区别
+- get 和 post 请求区别
 - get 如何发送一个图片
-- Hybird WebView权限控制的
+- Hybird WebView 权限控制的
 - WebView 安全漏洞及防护
 - Jsbrige 原理
 - xxApp 混合开发 难点及架构
 - 性能优化
-- cdn外部引用的好处
+- cdn 外部引用的好处
 - Gzip 原理
-- 服务端渲染的优缺点 
+- 服务端渲染的优缺点
+
+### 字节跳动 （一面）
+
+- Jsbrige 原理
+
+- Jsbrige 加载速度检测过么？如何优化?
+
+- Hybird 性能优化
+
+- 手写 图片懒加载 （进入视口展示）
+
+- Node 模块机制
+
+- egg 怎么部署的，多进程如何通信
+
+- SSR 的流程
+
+- 首屏渲染 检测指标和具体的优化方式
+
+- 广告 sdk 嵌入网页如何防止 iframe 包裹覆盖
 
 ### 百度
 
