--- a/docs/面试/大厂面试题.md
+++ b/docs/面试/大厂面试题.md
@@ -2,7 +2,7 @@
 title: 大厂面试题
 ---
 
-### hello 单车 （一面）
+### hello 单车
 
 - 1.hybid jsbrige 如何通信的,JSBridge 的原理<https://blog.csdn.net/yuzhengfei7/article/details/93468914>
 
@@ -29,7 +29,7 @@ title: 大厂面试题
 
 - 11.js 在面向对象里面的体现 ， 继承有几种实现方式 ，寄生组合式继承 具体是怎样的？es5 和 es6 继承的区别
 
-### 阿里 钉钉 （一面）：
+### 阿里 钉钉
 
 - postion 的属性
 - 文档流是什么？
@@ -44,7 +44,7 @@ title: 大厂面试题
 - Gzip 原理
 - 服务端渲染的优缺点
 
-### 字节跳动 （一面）
+### 字节跳动
 
 - Jsbrige 原理
 
@@ -63,6 +63,36 @@ title: 大厂面试题
 - 首屏渲染 检测指标和具体的优化方式
 
 - 广告 sdk 嵌入网页如何防止 iframe 包裹覆盖
+
+### 掌门集团
+
+- 1 像素边框问题怎么解决
+
+- SSR 渲染流程
+
+- Hybird jsBridge 的原理？url schema 有几种类型？
+
+- WebView 的优化有哪些？
+
+- Ios WkWebview 会有哪些问题？
+
+- 描述一个你做过或解决 u 一个项目问题，你是怎么解决的
+
+- 从发送请求到服务段接收的请求 都经历过哪些过程？
+
+- http 讲一下
+
+- 301、302、304，401 、402 、403 分别代表什么意思？
+
+- 一道场景题 要求用面向对象思想去设计和实现
+
+- js 的原型和原型链机制，延伸 js 的继承机制是怎样的和 java 的继承机制有什么区别
+
+- typeScript 的装饰器 是什么原理 和 java 的注解语法有什么类似的地方？
+
+- 小程序的 登录机制是怎样的？
+
+- Electron 的深入使用和架构特性和 Android 以及 ReactNative ，Taro 这些有什么区别？
 
 ### 百度
 
