--- a/docs/面试/大厂面试题.md
+++ b/docs/面试/大厂面试题.md
@@ -76,11 +76,11 @@ title: 大厂面试题
 
 - Ios WkWebview 会有哪些问题？
 
-- 描述一个你做过或解决 u 一个项目问题，你是怎么解决的
+- 描述一个你做过或解决的一个项目的疑难杂症问题，你是怎么解决的
 
 - 从发送请求到服务段接收的请求 都经历过哪些过程？
 
-- http 讲一下
+- 关于 http 能系统的讲一下么？
 
 - 301、302、304，401 、402 、403 分别代表什么意思？
 
