--- a/docs/00-大纲.md
+++ b/docs/00-大纲.md
@@ -13,6 +13,11 @@ title: 项目大纲
 
 ![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/MindMaping/JavaScript.png)
 ![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/MindMaping/Nuxt%20%281%29.png)
+
+![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/2021/react/2.2.0%E5%85%A8%E6%A0%88%E5%A4%A7%E5%89%8D%E7%AB%AF%E4%B9%8B%E9%AB%98%E7%BA%A7%E8%BF%9B%E9%98%B6-React%E5%BF%85%E7%AD%94%E4%BA%8C.png)
+
+![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/2021/react/2.2.1%E5%85%A8%E6%A0%88%E5%A4%A7%E5%89%8D%E7%AB%AF%E4%B9%8B%E9%AB%98%E7%BA%A7%E8%BF%9B%E9%98%B6-ReactHooks.png)
+
 ![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/MindMaping/Vue%E6%A0%B8%E5%BF%83%E7%94%A8%E6%B3%95.png)
 ![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/MindMaping/Webpack.png)
 ![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/MindMaping/%E5%89%8D%E7%AB%AF%E5%AE%89%E5%85%A8.png)
@@ -21,4 +26,5 @@ title: 项目大纲
 
 ### 更多待更新内容
 
-![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/MindMaping/00-%E7%9B%AE%E5%BD%95-%E5%A4%A7%E5%89%8D%E7%AB%AF.jpg)
+![](/update1.png)
+![](/update2.png)
