--- a/docs/98-面试/面试资料.md
+++ b/docs/98-面试/面试资料.md
@@ -18,12 +18,12 @@ title: 面试资料
   <http://blog.poetries.top/FE-Interview-Questions/>
   :::
   ::: warning
-  前端面试与进阶指南 ⭐️
-  <https://www.cxymsg.com/>
-  :::
-  ::: warning
   木易杨前端进阶 ⭐️
   <https://www.muyiy.cn/blog/>
+  :::
+  ::: tip
+  大厂每日一题
+  <https://q.shanyue.tech/>
   :::
   ::: tip
   前端进阶之道
