update：code full

--- a/docs/27-算法/00-排序.md
+++ b/docs/27-算法/00-排序.md
@@ -1,3 +1,39 @@
 ---
 title: 排序
 ---
+
+## 算法之十大排序
+
+- 快速排序(quickSort)
+
+```js
+function quickSort(array) {
+  if (array.length < 2) {
+    return array;
+  }
+  const target = array[0];
+  const left = [];
+  const right = [];
+  for (let i = 1; i < array.length; i++) {
+    const value = array[i];
+    if (target < value) {
+      left.push(value);
+    } else {
+      right.push(value);
+    }
+  }
+  return [...quickSort(left), target, ...quickSort(right)];
+}
+```
+
+- 快速排序(quickSort)5 行精简版
+
+```js
+function quickSort1(array) {
+  if (array.length < 2) return array;
+  const target = array[0];
+  const left = array.filter((v, i) => v <= target && i != 0);
+  const right = array.filter((v) => v > target);
+  return quickSort1(left).concat(target, quickSort1(right));
+}
+```
