--- a/docs/27-算法/05-综合.md
+++ b/docs/27-算法/05-综合.md
@@ -2,6 +2,37 @@
 title: 算法-高频
 ---
 
+- 两数之合
+
+```js
+//求差-对象方式
+function twoSum(nums, target) {
+  let temp = {};
+  for (let i = 0; i < nums.length; i++) {
+    const diff = temp[target - nums[i]];
+    if (diff !== undefined) {
+      return [diff, i];
+    }
+    temp[nums[i]] = i;
+  }
+}
+```
+
+```js
+//求差-map方式
+const twoSum = function (nums, target) {
+  const map = new Map();
+  const len = nums.length;
+  for (let i = 0; i < len; i++) {
+    const diff = target - nums[i];
+    if (map.has(diff)) {
+      return [map.get(diff), i];
+    }
+    map.set(nums[i], i);
+  }
+};
+```
+
 - LRU
 
 ```js
