--- a/docs/99-Other/01-编程范式.md
+++ b/docs/99-Other/01-编程范式.md
@@ -1061,7 +1061,7 @@ v-if 是“真正”的条件渲染，因为它会确保在切换过程中条件
 
 - 如果一个组件有许多关联子组件，可以以该组件作为命名空间编写、调用子组件。
 
-```plain
+```js
 class Form extends React.Component {
   // ...
 }
@@ -1073,7 +1073,7 @@ Form.Label = Label;
 Form.Input = Input;
 export default Form;
 // refence Form component
-import Form from './Form';
+import Form from "./Form";
 const App = (
   <Form>
     <Form.Row>
@@ -1091,7 +1091,7 @@ const App = (
 - 在组件行内设置属性（以便 propTypes 校验），不要在外部改变属性的值；
 - 属性较多使用`{…this.props}`语法；
 
-```plain
+```js
 // good
 const props = {};
 props.foo = x;
@@ -1106,7 +1106,7 @@ const component = <Component {...props} />;
 - 属性较少时可以行内排列；
 - 属性较多时每行一个属性，闭合标签单独成行。
 
-```plain
+```j s
 // bad - too long
 <input type="text" value={this.state.newDinosaurName} onChange={this.inputHandler.bind(this, 'newDinosaurName')} />
 // bad - aligning attributes after the tag
@@ -1126,7 +1126,7 @@ const component = <Component {...props} />;
 - 属性`=`前后不要添加空格
 - JSX 中的花括号前后不要添加空格。
 
-```plain
+```js
 // bad
 <Foo bar={ baz } foo = "bar" />
 // good
@@ -1140,15 +1140,27 @@ const component = <Component {...props} />;
 - 组件属性都应该在`propTypes`中声明类型；
 - 始终明确指定非必选属性的默认值。
 
-```plain
+```js
 // bad
 function SFC({ foo, bar, children }) {
-  return <div>{foo}{bar}{children}</div>;
+  return (
+    <div>
+      {foo}
+      {bar}
+      {children}
+    </div>
+  );
 }
 
 // good
 function SFC({ foo, bar, children }) {
-  return <div>{foo}{bar}{children}</div>;
+  return (
+    <div>
+      {foo}
+      {bar}
+      {children}
+    </div>
+  );
 }
 SFC.propTypes = {
   foo: PropTypes.number.isRequired,
@@ -1156,7 +1168,7 @@ SFC.propTypes = {
   children: PropTypes.node,
 };
 SFC.defaultProps = {
-  bar: '',
+  bar: "",
   children: null,
 };
 ```
@@ -1170,22 +1182,27 @@ SFC.defaultProps = {
 
 - 多行的 JSX 使用 () 包裹，有组件嵌套时使用多行模式；
 
-```plain
+```js
 // bad
- return (<div><ComponentOne /><ComponentTwo /></div>);
- // good
- var multilineJsx = (
-   <header>
-     <Logo />
-     <Nav />
-   </header>
- );
- // good
- return (
-   <div>
-     <ComponentOne />
-     <ComponentTwo />
-   </div>
+return (
+  <div>
+    <ComponentOne />
+    <ComponentTwo />
+  </div>
+);
+// good
+var multilineJsx = (
+  <header>
+    <Logo />
+    <Nav />
+  </header>
+);
+// good
+return (
+  <div>
+    <ComponentOne />
+    <ComponentTwo />
+  </div>
 );
 ```
 
@@ -1196,7 +1213,7 @@ SFC.defaultProps = {
 - 自闭合所有没有子组件的标签；
 - 自闭合标签`/`前留一个空格。
 
-```plain
+```js
 // bad
 <Logo></Logo>
 // very bad
@@ -1212,31 +1229,23 @@ SFC.defaultProps = {
 
 - 事件函数用`public class fields`型
 
-```plain
+```js
 // good
 class Foo extends React.Component {
   handleClick = () => {
-    this.setState({ xxx: aaa })
-  }
+    this.setState({ xxx: aaa });
+  };
   render() {
-    return (
-      <button onClick={this.handleClick}>
-        Click me
-      </button>
-    )
+    return <button onClick={this.handleClick}>Click me</button>;
   }
 }
 // bad
 class Foo extends React.Component {
-  handleClick () {
-    this.setState({ xxx: aaa })
+  handleClick() {
+    this.setState({ xxx: aaa });
   }
   render() {
-    return (
-      <button onClick={this.handleClick.bind(this)}>
-        Click me
-      </button>
-    )
+    return <button onClick={this.handleClick.bind(this)}>Click me</button>;
   }
 }
 ```
