--- a/docs/27-算法/00-排序.md
+++ b/docs/27-算法/00-排序.md
@@ -4,7 +4,7 @@ title: 排序
 
 ## 算法之十大排序
 
-- 快速排序(quickSort)
+### 快速排序(quickSort)
 
 ```js
 function quickSort(array) {
@@ -26,7 +26,7 @@ function quickSort(array) {
 }
 ```
 
-- 快速排序(quickSort)5 行精简版
+### 快速排序(quickSort)5 行精简版
 
 ```js
 function quickSort1(array) {
