--- a/docs/27-算法/05-综合.md
+++ b/docs/27-算法/05-综合.md
@@ -2,7 +2,7 @@
 title: 算法-高频
 ---
 
-- 两数之合
+### 两数之合
 
 ```js
 //求差-对象方式
@@ -17,6 +17,8 @@ function twoSum(nums, target) {
   }
 }
 ```
+
+- 求差-map 方式
 
 ```js
 //求差-map方式
@@ -33,7 +35,7 @@ const twoSum = function (nums, target) {
 };
 ```
 
-- LRU
+### LRU Cache
 
 ```js
 //最近最少使用原则，使用就更新，不使用往队列后面排
