--- a/docs/11-JavaScript/JavaScript类与对象/创建对象和继承.md
+++ b/docs/11-JavaScript/JavaScript类与对象/创建对象和继承.md
@@ -1,5 +1,5 @@
 ---
-title: 创建对象和继承
+title: 创建对象
 ---
 
 ## 创建对象的几种方式
@@ -30,7 +30,7 @@ title: 创建对象和继承
       // 再动态添加属性/方法
       p.name = "Tom";
       p.age = 12;
-      p.setName = function(name) {
+      p.setName = function (name) {
         this.name = name;
       };
 
@@ -63,9 +63,9 @@ title: 创建对象和继承
       var p = {
         name: "Tom",
         age: 12,
-        setName: function(name) {
+        setName: function (name) {
           this.name = name;
-        }
+        },
       };
 
       //测试
@@ -77,9 +77,9 @@ title: 创建对象和继承
         //如果创建多个对象代码很重复
         name: "Bob",
         age: 13,
-        setName: function(name) {
+        setName: function (name) {
           this.name = name;
-        }
+        },
       };
     </script>
   </body>
@@ -118,9 +118,9 @@ title: 创建对象和继承
         var obj = {
           name: name,
           age: age,
-          setName: function(name) {
+          setName: function (name) {
             this.name = name;
-          }
+          },
         };
 
         return obj;
@@ -135,7 +135,7 @@ title: 创建对象和继承
       function createStudent(name, price) {
         var obj = {
           name: name,
-          price: price
+          price: price,
         };
         return obj;
       }
@@ -169,7 +169,7 @@ title: 创建对象和继承
       function Person(name, age) {
         this.name = name;
         this.age = age;
-        this.setName = function(name) {
+        this.setName = function (name) {
           this.name = name;
         };
       }
