--- a/docs/16-Vue3/00-Vue3基础.md
+++ b/docs/16-Vue3/00-Vue3基础.md
@@ -1,3 +1,8 @@
 ---
 title: Vue3基础
 ---
+
+[Vue3 官方文档](https://v3.cn.vuejs.org/guide/introduction.html#%E8%B5%B7%E6%AD%A5)
+[快速使用 Vue3 最新的 15 个常用 API](https://github.com/cuixiaorui/mini-vue)
+
+[Vue2 和 Vue3 使用上的区别在这，耗子尾汁！](https://mp.weixin.qq.com/s/gclAvs3LPUtfcCYrkoAZUQ)
