--- a/docs/16-Vue3/01-Vue3源码.md
+++ b/docs/16-Vue3/01-Vue3源码.md
@@ -9,3 +9,4 @@ title: Vue3源码
 [mini-vue](https://github.com/cuixiaorui/mini-vue)
 
 [Vue3 DOM Diff 核心算法解析](https://juejin.cn/post/6877814455968350215#heading-5)
+[【阮一峰推荐】学习 vue3 源码的利器](https://mp.weixin.qq.com/s/vAfb-FuoF2z1tZe6xJ9xnQ)
