update： dir structrue

--- a/docs/98-面试/面试题.md
+++ b/docs/98-面试/面试题.md
@@ -2,6 +2,36 @@
 title: 大厂面试题
 ---
 
+### 蔚来汽车
+
+- 1.微前端是什么？解决了什么应用场景？有什么明显的好处和作用？
+
+- 2.qiankun 基于什么封装的？Single Spa 是怎么实现的有哪些功能？Single 的 js 和 css 隔离机制是什么做的？
+
+- 3.你在项目中是怎么用 qiankun 的遇到了什么问题是？分别是怎么解决的？
+
+- 4.DNS 实现机制是怎么样的？如何优化 DNS 的速度？
+
+- 5.Https 是怎么保障安全的？为什么要用 RSA+AES 加密两者结合的好处是什么？
+
+- 6.浏览器什么时候会崩溃？有几种原因？分别是什么引起的？你是如何监控和优化的？
+
+- 7.浏览器内存溢出会有多少种出现的方式？怎么排查和解决问题？
+
+- 8.gzip 原理？他对图片类型文件压缩有效果么？
+
+- 9.React 17 都有哪些变化？有什么作用？
+
+- 10.React fible 架构有什么作用？链表结构和之前的树状结构有什么好处？链表是如何串联起整个 dom 的？顺序是什么？
+
+- 11.函数式编程是什么？有什么好处和作用
+
+- 12.setState 什么时候异步什么时候同步？异步是真的异步么？他的底层机制到底是什么？
+
+- 13.SSR 是什么有什么作用？同构的含义是？SSR 会带来什么问题？你是怎么优化的？
+
+- 14.Next 的服务端计算是怎么处理的？如果一个 SSR 应用有大量数据加载？你是如何优化？服务端怎么做？客户端又是怎么做？
+
 ### hello 单车
 
 - 1.hybid jsbrige 如何通信的,JSBridge 的原理<https://blog.csdn.net/yuzhengfei7/article/details/93468914>
