--- a/docs/27-算法/05-综合.md
+++ b/docs/27-算法/05-综合.md
@@ -2,10 +2,11 @@
 title: 算法-高频
 ---
 
-### 两数之合
+### #1.两数之合
+
+- 求差-对象方式
 
 ```js
-//求差-对象方式
 function twoSum(nums, target) {
   let temp = {};
   for (let i = 0; i < nums.length; i++) {
@@ -33,6 +34,39 @@ const twoSum = function (nums, target) {
     map.set(nums[i], i);
   }
 };
+```
+
+### #20.有效括号
+
+```js
+const isValid=function (s){
+  if (s typeof !='string'){
+    return false
+  }
+  const mapper={
+    '{':'}',
+    '[':']',
+    '(':')'
+  }
+  const stack=[]
+  for(i in s){
+    const v= s[i]
+    if(['{','[','('].indexOf>-1){
+      stack.push(v)
+    }
+    else{
+      const peak=stack.pop()
+      if(v!=mapper[peak]){
+        return false
+      }
+    }
+  }
+  if(stack.length>0){
+      return false
+    }
+    return true
+}
+
 ```
 
 ### LRU Cache
