--- a/docs/98-面试/面试题.md
+++ b/docs/98-面试/面试题.md
@@ -2,6 +2,30 @@
 title: 大厂面试题
 ---
 
+### 网易云音乐
+
+- 1.ReactNative 和 Native 如何通信的？H5 与 Native 又是如何通信的？你们是如何封装的通信层
+
+- 2.JsBridge 的原理是什么？除了 JsBridge 还有什么通信方式？Url schema 和 JsBridge 有啥区别？
+
+- 3.React 的事件合成机制是怎样的？有哪些好处？React17 的事件有哪些变更？
+
+- 4.React 16 废弃了 15 里面哪些生命周期，为什么废弃这些？
+
+- 5.React 类组件与函数的区别？(答的越多越深越好)
+
+- 6.Node 如何开启多进程
+
+- 7.Egg 有几个进程？分别有什么作用
+
+- 8.你常用的数据库有哪些？她们直接有什么区别（mySql，Redis，Mongo，ElasticeSearch）
+
+- 9.mySql 索引怎么建立使用
+
+- 10.webpack 如何做到组件懒加载的？TreeShaking 是什么版本才有的？有哪些限制？commonjs 里面能用么？
+
+- 11.Js 闭包是什么？会产生什么问题？有哪些应用场景？
+
 ### 蔚来汽车
 
 - 1.微前端是什么？解决了什么应用场景？有什么明显的好处和作用？
