--- a/docs/17-React/01-知识点综合.md
+++ b/docs/17-React/01-知识点综合.md
@@ -2,6 +2,17 @@
 title: 知识综合
 ---
 
+- 先放几张思维导图
+  ![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/2021/react/2.2.0%E5%85%A8%E6%A0%88%E5%A4%A7%E5%89%8D%E7%AB%AF%E4%B9%8B%E9%AB%98%E7%BA%A7%E8%BF%9B%E9%98%B6-React%E5%9F%BA%E7%A1%80.png)
+
+![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/2021/react/2.2.0%E5%85%A8%E6%A0%88%E5%A4%A7%E5%89%8D%E7%AB%AF%E4%B9%8B%E9%AB%98%E7%BA%A7%E8%BF%9B%E9%98%B6-React%E5%BF%85%E7%AD%94%E4%BA%8C.png)
+
+![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/2021/react/2.2.1%E5%85%A8%E6%A0%88%E5%A4%A7%E5%89%8D%E7%AB%AF%E4%B9%8B%E9%AB%98%E7%BA%A7%E8%BF%9B%E9%98%B6-ReactHooks.png)
+
+![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/2021/react/2.2.1%E5%85%A8%E6%A0%88%E5%A4%A7%E5%89%8D%E7%AB%AF%E4%B9%8B%E9%AB%98%E7%BA%A7%E8%BF%9B%E9%98%B6-React%E7%94%9F%E6%80%81.png)
+
+![](https://vp-blog-img.oss-cn-shanghai.aliyuncs.com/2021/react/2.2.3%E5%85%A8%E6%A0%88%E5%A4%A7%E5%89%8D%E7%AB%AF%E4%B9%8B%E9%AB%98%E7%BA%A7%E8%BF%9B%E9%98%B6-React%E6%BA%90%E7%A0%81.png)
+
 ## React 最新的生命周期是怎样的?
 
 React 16 之后有三个生命周期被废弃(但并未删除)
